Fixes #1363 - ClayCSS Collapse Icon use em values instead of rem on top property so it scales with font size changes
Fixes #1363 - ClayCSS Collapse Icon make `.collapse-icon-middle` more specific so it applies when nested inside components like Panel and Sheet

--- a/packages/clay-css/src/scss/components/_icons.scss
+++ b/packages/clay-css/src/scss/components/_icons.scss
@@ -80,7 +80,7 @@ a.collapse-icon {
 	}
 }
 
-.collapse-icon-middle {
+.collapse-icon.collapse-icon-middle {
 	.collapse-icon-closed,
 	.collapse-icon-open {
 		margin-top: 0;
